wooo  Changes to be committed: 	modified:   .github/firmware_build.yml 	new file:   root/magisk_patched.img 	new file:   scripts/aria.sh 	new file:   scripts/carrier_killer.sh 	new file:   scripts/debloat_list.txt 	new file:   scripts/grunge 	new file:   scripts/perf_tweaks/99perf.rc 	new file:   scripts/perf_tweaks/sysctl.conf

--- a/.github/firmware_build.yml
+++ b/.github/firmware_build.yml
@@ -16,6 +16,10 @@ jobs:
       - name: Download Firmware 
         run: | 
           aria2c -x8 "https://samfw.com/firmware/SM-A326U1/XAA/A326U1UESBDWI1.zip" -d firmware/original/ 
+          - name: Install Magisk 
+  run: | 
+    wget https://github.com/topjohnwu/Magisk/releases/latest/download/magisk.apk 
+    unzip magisk.apk -d tools/magisk 
           
       - name: Run Aria Script 
         run: | 
