--- a/.github/firmware_build.yml
+++ b/.github/firmware_build.yml
@@ -17,6 +17,7 @@ jobs:
         run: | 
           aria2c -x8 "https://samfw.com/firmware/SM-A326U1/XAA/A326U1UESBDWI1.zip" -d firmware/original/ 
           - name: Install Magisk 
+  - name: Magisk
   run: | 
     wget https://github.com/topjohnwu/Magisk/releases/latest/download/magisk.apk 
     unzip magisk.apk -d tools/magisk 
